# cpp-exercises

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  codecov.yml  codecoverage.sh
.github/workflows/: ci.yml  clang-format-check.yml  codeql-analysis.yml
src/: AbundantNumber.cpp  AbundantNumber.h  CMakeLists.txt  NumberClassifier.h  PerfectNumber.cpp  PerfectNumber.h  SetExercise.cpp  SetExercise.h  UglyNumber.cpp  UglyNumber.h  runner.cpp
tests/: AbundantNumberTest.cpp  CMakeLists.txt  PerfectNumberTest.cpp  SetExerciseTest.cpp  UglyNumberTest.cpp  UglyNumber_test.cpp
